FIX make sure select dropdowns in add page dialog aren't cut off due to .parent-mode class having overflow:auto

--- a/admin/scss/_style.scss
+++ b/admin/scss/_style.scss
@@ -529,6 +529,8 @@ body.cms {
 	}
 	ul.SelectionGroup {
 		padding-left:28px;
+		overflow: visible;
+		@include legacy-pie-clearfix;
 	}
 	.parent-mode {
 		padding: $grid-x;
